feat(url): remove click counts column
